# attend

./: .gitignore  README.md  pyproject.toml
db/: create_db.py  dump-attend-202206091659.sql
src/: main.py
src/composer/: class_composite.py  lecture_composite.py  user_composite.py
src/domain/core/: jwt.py  security.py
src/domain/models/: __init__.py  classes.py  lectures.py  users.py
src/infra/config/: __init__.py  db.py
src/infra/entities/: __init__.py  aclass.py  attendance.py  course.py  lecture.py  period.py  student_class.py  subject.py  user.py
src/infra/repo/: class_repository.py  lecture_repository.py  user_repository.py
src/presenters/controllers/: class_controller.py  lecture_controller.py  user_controller.py
src/routes/: __init__.py  aclass.py  auth.py  lecture.py  user.py
tests/: test_main.http
